2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: File formatted with clang-format.
	* Features.h: Likewise.
	* GCCCallbacks.cpp: Likewise.
	* GCCPlugin.cpp: Likewise.
	* MAGEECPlugin.h: Likewise.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Make header include order consistent.
	* GCCCallbacks.cpp: Likewise.
	* GCCPlugin.cpp: Likewise.
	* MAGEECPlugin.h: Likewise.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Remove PluginInfo.cpp from files to build.
	* GCCPlugin.cpp (mageec_plugin_version): Added global to track the
	version number. Move the check for the correct version number to
	MAGEECPlugin.h.
	(printHelp printMLs printDatabaseVersion): Added functions.
	(printPluginInfo): Moved from PluginInfo.cpp and renamed from
	mageecPluginInfo.
	(parseArguments): Take the raw plugin info and version as arguments.
	Add handling for help, version, framework-version and database-version
	arguments. Add printing of machine learners.
	* MAGEECPlugin.h: Moved version number check from GCCPlugin.cpp.
	(MAGEECContext::with_plugin_info): Removed member.
	(mageec_plugin_version): Added global to keep track of the plugin
	version number.
	(mageecPluginInfo): Removed declaration.
	* PluginInfo.cpp: Removed file, printing of plugin info is now handled
	in GCCPlugin.cpp.

2016-01-08  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Link the plugin library with the machine learners.
	* FeatureExtract.cpp (featureExtractExecute): Update uses of the
	debug interface.
	* GCCCallBacks.cpp: Likewise.
	(mageecStartFile): Update to use new MAGEECContext structure.
	(mageecPassGate): Likewise.
	* GCCPlugin.cpp (parseArguments): Refactor argument parsing. Add
	debug, ml-config, metric and print-trained-mls arguments. Remove
	the old 'mode' argument in favor of seperate optimize and save
	features flags.
	(plugin_init): Initialize the built in C5 and FileML machine learners.